// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductSpecifications /> component should match snapshot with table view and no specifications 1`] = `<DocumentFragment />`;

exports[`<ProductSpecifications /> component should match snapshot with table view and with specification 1`] = `
<DocumentFragment>
  <div
    class="specificationsTableContainer mt9 mt0-l pl8-l"
  >
    <h2
      class="specificationsTitle t-heading-5 mb5 mt0"
    >
      Technical Specifications
    </h2>
    <div
      class="relative"
      style="transition: 600ms ease-in-out; height: auto; overflow: hidden; display: block;"
    >
      <div
        class="h-auto"
      >
        <table
          class="specificationsTable w-100 bg-base border-collapse"
        >
          <thead>
            <tr>
              <th
                class="specificationsTablePropertyHeading w-50 b--muted-4 bb bt c-muted-2 t-body tl pa5"
              >
                <span>
                  Property
                </span>
              </th>
              <th
                class="specificationsTableSpecificationHeading w-50 b--muted-4 bb bt c-muted-2 t-body tl pa5"
              >
                <span>
                  Specification
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="specificationItemProperty w-50 b--muted-4 bb pa5"
              >
                test
              </td>
              <td
                class="specificationItemSpecifications w-50 b--muted-4 bb pa5"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="pointerEventsNone dn absolute bottom-0 w-100 h-100 flex-column justify-end"
      >
        <div
          class="fadeBottom w-100 h-50"
          style="transition: 400ms ease-in-out;"
        />
        <div
          class="pointerEventsAuto bg-base tc w-100"
        >
          <button
            class="c-action-primary t-action pointer ma5 bn outline-0"
          >
            <span>
              Show more
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProductSpecifications /> component should match snapshot with tabs view 1`] = `
<DocumentFragment>
  <div
    class="specificationsTabsContainer pt8"
  >
    <h2
      class="specificationsTitle t-heading-5 mb5 mt0"
    >
      Technical Specifications
    </h2>
    <div
      class="tabs-mock"
    >
       
      <div
        class="tab-mock"
      >
         
        <div
          class="specificationsTab pb8 c-muted-1 pv6"
        >
          <div
            class="relative"
            style="transition: 600ms ease-in-out; height: auto; overflow: hidden; display: block;"
          >
            <div
              class="h-auto"
            >
              value
            </div>
            <div
              class="pointerEventsNone dn absolute bottom-0 w-100 h-100 flex-column justify-end"
            >
              <div
                class="fadeBottom w-100 h-50"
                style="transition: 400ms ease-in-out;"
              />
              <div
                class="pointerEventsAuto bg-base tc w-100"
              >
                <button
                  class="c-action-primary t-action pointer ma5 bn outline-0"
                >
                  <span>
                    Show more
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
         
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;
